esl_randomseq module created, from 16 sequence sampling functions that were in esl_random; these were renamed to esl_rsq_* from esl_rnd_*. [J3/20].
esl_keyhash upgraded to be pointerless, to fix reallocation bugs; and
the hash function is replaced by jenkins_hash(); now keyhash table
size isn't limited to primes < 100003 any more. keyhash benchmark2
tests uniformity of hash distribution; this hash is uniform within
chi-squared test's resolution, far better than previous. [J3/14]

esl_rnd_Choose() renamed to esl_rnd_Roll().

esl_sqio.tex documentation improved.

Bugfix in reading MSA files via sqio and trying to guess alphabet. [J3/17]

Add set_seq_ss, set_seq_sa functions to esl_msa

Disable gsl check in configure.ac by setting with_gsl=no as default,
not with_gsl=check

bugfix: esl_sq_Set*, esl_msa_Set* functions need to make a copy of
argp in order to call vnsprintf() twice.

Don't use FileNewSuffix() for .ssi file names. It creates file name
clashes when it deletes an existing suffix. Just append .ssi instead.

updated the MSA test driver.

changed the esl_exception error mesg to say "exception" instead of
"fatal", so people like me aren't confused into setting a gdb
breakpoint in esl_fatal when they see a "fatal" exit.

Added DESTDIR to make install target.

esl-seqstat: -a option reports per-sequence info lines.

bugfix in esl_msashuffle: wouldn't compile in modular mode, because it
wasn't dealing with alphabet augmentation properly.

esl_stack_Shuffle() wasn't in the .h file



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@249 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -156,9 +156,11 @@ alignment format and all its complex and powerful annotation markup):
 
 \begin{center}
 \begin{tabular}{p{1in}p{3.7in}}
+\eslmod{sq}       & Single biological sequences            \\
+\eslmod{msa}      & Multiple sequence alignments and i/o   \\
 \eslmod{alphabet} & Digitized biosequence alphabets        \\
+\eslmod{randomseq}& Making random sequences                \\
 \eslmod{sqio}     & Sequence file i/o                      \\
-\eslmod{msa}      & Multiple sequence alignment i/o       \\
 \eslmod{ssi}      & Indexing large sequence files for rapid random access \\
 \end{tabular}
 \end{center}
