--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -52,8 +52,20 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Biosequence data i/o modules}
+\chapter{Biosequence data modules}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newpage
+\section{\eslmod{sq}: single biological sequences}
+\input{../esl_sq}
+\subsection{Functions in the sq module}
+\input{autotext/esl_sq_functions}
+
+\newpage
+\section{\eslmod{msa}: Multiple sequence alignments and i/o}
+\input{../esl_msa}
+\subsection{Functions in the msa module}
+\input{autotext/esl_msa_functions}
 
 \newpage
 \section{\eslmod{alphabet}: digitized biosequences}
@@ -62,10 +74,10 @@
 \input{autotext/esl_alphabet_functions}
 
 \newpage
-\section{\eslmod{msa}: Multiple sequence alignment i/o}
-\input{../esl_msa}
-\subsection{Functions in the msa module}
-\input{autotext/esl_msa_functions}
+\section{\eslmod{randomseq}: sampling random sequences}
+\input{../esl_randomseq}
+\subsection{Functions in the randomseq module}
+\input{autotext/esl_randomseq_functions}
 
 \newpage
 \section{\eslmod{sqio}: i/o of unaligned sequence files}
@@ -320,7 +332,7 @@
 \input{autotext/esl_getopts_functions}
 
 \newpage
-\section{\eslmod{keyhash}: keyword hashing, associative array emulation}
+\section{\eslmod{keyhash}: associative hashes}
 \input{../esl_keyhash}
 \subsection{Functions in the keyhash module}
 \input{autotext/esl_keyhash_functions}
