--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -77,7 +77,7 @@ accelerating indexing of some internal data structures.
 
 
 
-\subsection{Example of using the msa API}
+\subsection{Example of using msa}
 
 Here's an example of opening an MSA file and reading one or more
 alignments from it:
