--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -159,7 +159,7 @@ alignment format and all its complex and powerful annotation markup):
 \eslmod{sq}       & Single biological sequences            \\
 \eslmod{msa}      & Multiple sequence alignments and i/o   \\
 \eslmod{alphabet} & Digitized biosequence alphabets        \\
-\eslmod{randomseq}& Making random sequences                \\
+\eslmod{randomseq}& Sampling random sequences              \\
 \eslmod{sqio}     & Sequence file i/o                      \\
 \eslmod{ssi}      & Indexing large sequence files for rapid random access \\
 \end{tabular}
