--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -86,7 +86,7 @@
 \input{autotext/esl_sqio_functions}
 
 \newpage
-\section{\eslmod{ssi}: indexing database flatfiles for fast record retrieval}
+\section{\eslmod{ssi}: indexing flatfiles for record retrieval}
 \input{../esl_ssi}
 \subsection{Functions in the ssi module}
 \input{autotext/esl_ssi_functions}
