--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -49,7 +49,7 @@ accelerating indexing of some internal data structures.
 \apisubhead{General i/o API, all alignment formats                                 }\\
 \hyperlink{func:esl_msa_Read()}{\ccode{esl\_msa\_Read()}} & Read next MSA from a file.\\
 \hyperlink{func:esl_msa_Write()}{\ccode{esl\_msa\_Write()}} & Write an MSA to a file.\\
-\hyperlink{func:esl_msa_DescribeFormat()}{\ccode{esl\_msa\_DescribeFormat()}} & Convert internal file format code to text string.\\
+\hyperlink{func:esl_msa_DecodeFormat()}{\ccode{esl\_msa\_DecodeFormat()}} & Convert internal file format code to text string.\\
 \hyperlink{func:esl_msa_GuessFileFormat()}{\ccode{esl\_msa\_GuessFileFormat()}} & Determine the format of an open MSA file.\\
 \apisubhead{Miscellaneous functions for manipulating MSAs}\\
 \hyperlink{func:esl_msa_SequenceSubset()}{\ccode{esl\_msa\_SequenceSubset()}} & Select subset of sequences into a smaller MSA.\\
