--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -33,8 +33,8 @@ while it's being read.
 \hyperlink{func:esl_sqio_Write()}{\ccode{esl\_sqio\_Write()}} & Description.\\
 \hyperlink{func:esl_sqio_Echo()}{\ccode{esl\_sqio\_Echo()}} & Echo the next sequence record onto output stream\\
 \hyperlink{func:esl_sqio_WhatFormat()}{\ccode{esl\_sqio\_WhatFormat()}} & Description.\\
-\hyperlink{func:esl_sqio_FormatCode()}{\ccode{esl\_sqio\_FormatCode()}} & Description.\\
-\hyperlink{func:esl_sqio_DescribeFormat()}{\ccode{esl\_sqio\_DescribeFormat()}} & Returns descriptive string for file format code.\\
+\hyperlink{func:esl_sqio_EncodeFormat()}{\ccode{esl\_sqio\_EncodeFormat()}} & Description.\\
+\hyperlink{func:esl_sqio_DecodeFormat()}{\ccode{esl\_sqio\_DecodeFormat()}} & Returns descriptive string for file format code.\\
 \hyperlink{func:esl_sqio_IsAlignment()}{\ccode{esl\_sqio\_IsAlignment()}} & Description.\\
 \hyperlink{func:esl_sqio_Position()}{\ccode{esl\_sqio\_Position()}} & Description.\\
 \hyperlink{func:esl_sqio_Rewind()}{\ccode{esl\_sqio\_Rewind()}} & Description.\\
