Added esl_keyhash_Reuse(). Typo fixes to get doc to compile
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@322 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_keyhash.tex
+++ b/esl_keyhash.tex
@@ -16,9 +16,12 @@ Table~\ref{tbl:keyhash_api} lists the functions in the
 \apisubhead{The \ccode{ESL\_KEYHASH} object}\\
 \hyperlink{func:esl_keyhash_Create()}{\ccode{esl\_keyhash\_Create()}} & Allocates a new keyhash.\\
 \hyperlink{func:esl_keyhash_Clone()}{\ccode{esl\_keyhash\_Clone()}} & Duplicates a keyhash.\\
+\hyperlink{func:esl_keyhash_Get()}{\ccode{esl\_keyhash\_Get()}} & Returns a key name, given its index.\\
+\hyperlink{func:esl_keyhash_GetNumber()}{\ccode{esl\_keyhash\_GetNumber()}} & Returns the total number of keys stored.\\
+\hyperlink{func:esl_keyhash_Reuse()}{\ccode{esl\_keyhash\_Reuse()}} & Reuse a keyhash.\\
 \hyperlink{func:esl_keyhash_Destroy()}{\ccode{esl\_keyhash\_Destroy()}} & Frees a keyhash.\\
 \hyperlink{func:esl_keyhash_Dump()}{\ccode{esl\_keyhash\_Dump()}} & Dumps debugging information about a keyhash.\\
-\apisubhead{Storing and retrieving keys}\\
+\apisubhead{Storing and retrieving keys }\\
 \hyperlink{func:esl_key_Store()}{\ccode{esl\_key\_Store()}} & Store a key and get a key index for it.\\
 \hyperlink{func:esl_key_Lookup()}{\ccode{esl\_key\_Lookup()}} & Look up a key's array index.\\
 \hline
