Fixing #h41:  - added esl_opt_IsUsed()  - added esl_opt_IsOn()  - esl_opt_IsDefault() now checks against original default value,    so it can return TRUE even if the option was turned off then on again  - Replace most IsDefault() calls with either IsOn() or IsUsed()
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@323 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -3,11 +3,7 @@
 % times, mathptmx, mathpazo, newcent, bookman
 % xref http://www.ce.cmu.edu/~kijoo/latex2pdf.pdf
 \usepackage{times}
-
-
-
-
-%\usepackage{fullpage}
+\usepackage{fullpage}
 \usepackage{relsize}   % the \smaller command, used in \ccode for example
 \usepackage{fancyvrb}
 \usepackage[numbers,sort&compress]{natbib}
