esl_randomness_CreateTimeseeded deprecated
esl_randomness_Create(0) selects arbitrary seed using a bitmix of
time() and (if available) getpid(). 

configure now checks for getpid() 

miniapps that read alignments now take --informat option, so they can
read SELEX format.

Makefiles improved and synchronized better with HMMER [J4/99]

esl_hmm compiles, appears to work. [J4/97]

esl_stretchexp unit test improved, now not subject to stochastic
failure. [J4/97].



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@326 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_stretchexp.tex
+++ b/esl_stretchexp.tex
@@ -2,10 +2,10 @@
 The stretched exponential distribution may be useful for fitting
 fat-tailed empirical distributions.
 
-The stretched exponential is not the same as the Weibull distribution,
-though they have somewhat similar functional forms, and the Weibull is
-confusingly sometimes referred to as a ``stretched exponential
-distribution'' in the literature. (See the \eslmod{weibull} module.)
+The stretched exponential has a similar functional form as the Weibull
+distribution, and the Weibull is confusingly sometimes referred to as
+a ``stretched exponential distribution'' in the literature, but they
+are not the same. (See the \eslmod{weibull} module.)
 
 \begin{tabular}{lcll}\hline
 Variate    & $x$         & \ccode{double} & $\mu \leq x < \infty$ \\
@@ -13,7 +13,6 @@ Location   & $\mu$       & \ccode{double} & $-\infty < \mu < \infty$\\
 Scale      & $\lambda$   & \ccode{double} & $\lambda > 0$ \\ 
 Shape      & $\tau$      & \ccode{double} & $\tau > 0$ \\ \hline
 \end{tabular}
-
 
 The probability density function (PDF) is:
 
