--- a/esl_random.tex
+++ b/esl_random.tex
@@ -50,7 +50,6 @@ real that \ccode{esl\_random()} returned, you can access
 \begin{tabular}{|ll|}\hline
 \apisubhead{The \ccode{ESL\_RANDOMNESS} object.}\\
 \hyperlink{func:esl_randomness_Create()}{\ccode{esl\_randomness\_Create()}} & Create an RNG with a given seed.\\
-\hyperlink{func:esl_randomness_CreateTimeseeded()}{\ccode{esl\_randomness\_CreateTimeseeded()}} & Create an RNG with a quasirandom seed.\\
 \hyperlink{func:esl_randomness_Destroy()}{\ccode{esl\_randomness\_Destroy()}} & Free an RNG.            \\
 \hyperlink{func:esl_randomness_Init()}{\ccode{esl\_randomness\_Init()}} & Reinitialize an RNG.           \\
 \hyperlink{func:esl_randomness_GetSeed()}{\ccode{esl\_randomness\_GetSeed()}} & Returns the value of RNG's seed.\\
@@ -75,8 +74,8 @@ real that \ccode{esl\_random()} returned, you can access
 \subsection{Example of using random}
 
 Figure~\ref{fig:random_example} shows a program that initializes the
-random number generator with a seed of 42, then samples 10 random
-numbers using \ccode{esl\_random()}.
+random number generator with a seed you provide on the command line,
+then samples 10 random numbers using \ccode{esl\_random()}.
 
 \begin{figure}
 \input{cexcerpts/random_example}
@@ -86,7 +85,7 @@ numbers using \ccode{esl\_random()}.
 
 When a \ccode{ESL\_RANDOMNESS} object is created with
 \ccode{esl\_randomness\_Create()}, it needs to be given a \emph{seed},
-an integer $> 0$, which specifies the initial state of the
+an integer $\geq 0$, which specifies the initial state of the
 generator. After a generator is seeded, it is typically never seeded
 again. A series of \ccode{esl\_random()} calls generates a
 pseudorandom number sequence from that starting point. If you create
@@ -98,18 +97,12 @@ numbers, because the generator is always seeded with 42.
 
 Often one wants different runs to generate different random number
 sequences, which creates a chicken and the egg problem: how can we
-select a pseudorandom seed for the pseudorandom number generator? A
-traditional method is to use the current time. Easel provides an
-alternate creation function
-\ccode{esl\_randomness\_CreateTimeseeded()} which does this. If the
-precision of our clock is sufficiently fine, different runs of the
-program occur at different clock times. Easel relies on the POSIX
-clock for portability, but the POSIX clock has the drawback that it
-clicks in seconds, which is not very good precision. Thus, two
-different \ccode{ESL\_RANDOMNESS} objects created in the same second
-will generate identical random number sequences. Change the
-\ccode{esl\_randomness\_Create(42)} call in the example code to
-\ccode{esl\_randomness\_CreateTimeseeded()} and recompile, and you'll
-get different number sequences with each run - provided you run the
-commands in different seconds, anyway. 
+select a pseudorandom seed for the pseudorandom number generator?
+Calling \ccode{esl\_randomness\_Create(0)} (i.e., a seed argument of
+0) causes Easel to select an arbitrary seed. The arbitrary seed is
+constructed by a combination of the current time and (if available)
+the process id. Two different \ccode{ESL\_RANDOMNESS} objects created
+this way should (but are not guaranteed to) produce different
+pseudorandom number sequences.
+
 
